--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>piyushlund | funwithtriangles</title>
+    <title>piyushlund | hypotenuse</title>
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
@@ -12,13 +12,13 @@
         <div>
             <ul class="no-bullet nav-pills">
                 <li class="list-inline">
-                    <a class="link active" href="/index.html">Is Triangle ?</a>
+                    <a class="link" href="/index.html">Is Triangle ?</a>
                 </li>
                 <li class="list-inline">
                     <a class="link" href="./quiz.html">Triangle Quiz</a>
                 </li>
                 <li class="list-inline">
-                    <a class="link" href="./hypotenuse.html">Calculate Hypotenuse</a>
+                    <a class="link active" href="./hypotenuse.html">Calculate Hypotenuse</a>
                 </li>
                 <li class="list-inline">
                     <a class="link" href="./area.html">Calculate Area</a>
@@ -27,17 +27,13 @@
         </div>
     </nav>
 
-    <div class="container">
-        <h2>Is Triangle ?</h2>
-        <label for="input-angle1">Angle 1</label>
-        <input id="input-angle1" type="number"/>
-        <label for="input-angle2">Angle 2</label>
-        <input id="input-angle2" type="number"/>
-        <label for="input-angle3">Angle 3</label>
-        <input id="input-angle3" type="number"/>
-        <button id="btn-check">Is Triangle ?</button>
+    <div id="conatiner" style="margin:0% 40%;">
+        <p>Calculate hypotenuse</p>
+        <label for="input1">Enter side 1</label><input type="number" id="input1" />
+        <label for="input1">Enter side 2</label><input type="number" id="input2" />
+        <button id="btn-calculate">Calculate</button>
         <p id="message"></p>
     </div>
 </body>
-<script src="main.js" type="text/javascript"></script>
+<script src="hypotenuse.js" type="text/javascript"></script>
 </html>
