--- a/quiz.html
+++ b/quiz.html
@@ -10,6 +10,24 @@
 </head>
 
 <body>
+    <nav class="nav-bar">
+        <div>
+            <ul class="no-bullet nav-pills">
+                <li class="list-inline">
+                    <a class="link" href="/index.html">Is Triangle ?</a>
+                </li>
+                <li class="list-inline">
+                    <a class="link active" href="./quiz.html">Triangle Quiz</a>
+                </li>
+                <li class="list-inline">
+                    <a class="link" href="./hypotenuse.html">Calculate Hypotenuse</a>
+                </li>
+                <li class="list-inline">
+                    <a class="link" href="./area.html">Calculate Area</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container-quiz">
         <p>Triangle Quiz</p>
         <form class="form-quiz">
