--- a/quiz.html
+++ b/quiz.html
@@ -11,10 +11,13 @@
 
 <body>
     <nav class="nav-bar">
+        <div class="brand-name">
+            <span style="font-style:italic">Fun With Triangles</span>
+        </div>
         <div>
             <ul class="no-bullet nav-pills">
                 <li class="list-inline">
-                    <a class="link" href="/index.html">Is Triangle ?</a>
+                    <a class="link" href="./index.html">Is Triangle ?</a>
                 </li>
                 <li class="list-inline">
                     <a class="link active" href="./quiz.html">Triangle Quiz</a>
