--- a/area.html
+++ b/area.html
@@ -29,12 +29,12 @@
             </ul>
         </div>
     </nav>
-    <div id="conatiner" style="margin:0% 40%;">
-        <p>Calculate Area</p>
+    <div class="container">
+        <p class="heading">Calculate Area</p>
         <label for="input-base">Enter length of base(in cm)</label><input type="number" id="input-base" />
         <label for="input-height">Enter length of height(in cm)</label><input type="number" id="input-height" />
-        <button id="btn-calculate">Calculate</button>
-        <p id="message"></p>
+        <button class="btn-submit" id="btn-calculate">Calculate</button>
+        <p class="output-message"  id="message"></p>
     </div>
 </body>
 <script src="area.js" type="text/javascript"></script>
