--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -30,12 +30,12 @@
         </div>
     </nav>
 
-    <div id="conatiner" style="margin:0% 40%;">
-        <p>Calculate hypotenuse</p>
+    <div class="container">
+        <p class="heading">Calculate hypotenuse</p>
         <label for="input1">Enter side 1</label><input type="number" id="input1" />
         <label for="input1">Enter side 2</label><input type="number" id="input2" />
-        <button id="btn-calculate">Calculate</button>
-        <p id="message"></p>
+        <button class="btn-submit" id="btn-calculate">Calculate</button>
+        <p class="output-message" id="message"></p>
     </div>
 </body>
 <script src="hypotenuse.js" type="text/javascript"></script>
