--- a/index.html
+++ b/index.html
@@ -29,17 +29,16 @@
             </ul>
         </div>
     </nav>
-
     <div class="container">
-        <h2>Is Triangle ?</h2>
-        <label for="input-angle1">Angle 1</label>
+        <p class="heading">Is Triangle ?</p>
+        <label for="input-angle1">Enter Angle 1 (in degrees)</label>
         <input id="input-angle1" type="number"/>
-        <label for="input-angle2">Angle 2</label>
+        <label for="input-angle2">Enter Angle 2 (in degrees)</label>
         <input id="input-angle2" type="number"/>
-        <label for="input-angle3">Angle 3</label>
+        <label for="input-angle3">Enter Angle 3 (in degrees)</label>
         <input id="input-angle3" type="number"/>
-        <button id="btn-check">Is Triangle ?</button>
-        <p id="message"></p>
+        <button class="btn-submit" id="btn-check">Is Triangle ?</button>
+        <p class="output-message" id="message"></p>
     </div>
 </body>
 <script src="main.js" type="text/javascript"></script>
