--- a/quiz.html
+++ b/quiz.html
@@ -31,8 +31,8 @@
             </ul>
         </div>
     </nav>
-    <div class="container-quiz">
-        <p>Triangle Quiz</p>
+    <div class="container">
+        <p class="heading">Triangle Quiz</p>
         <form class="form-quiz">
             <div class="questions">
                 <label>What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</label>
@@ -59,8 +59,8 @@
                 <input type="radio" name="question4" value="4" class="btn-radio">4</input>
             </div>
         </form>
-        <button id="btn-check">Check</button>
-        <p id="message"></p>
+        <button class="btn-submit" id="btn-check">Check</button>
+        <p class="output-message"  id="message"></p>
     </div>
 </body>
 <script src="quiz.js" type="text/javascript"></script>
